--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Codicatest</title>
+    <title>Hospital</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <body class = "bg-light">
 
-  <body>
-    <%= yield %>
+    <header>
+    <nav class = "navbar navbar-expand navbar-dark bg-dark p-3 shadow">
+      <a class = "navbar-brand" href="#">Hospital</a>
+        <% if user_signed_in? %>
+        <ul class = "navbar-nav">
+          <li class = "nav-item active">
+            <%= link_to "Appointments", appointments_path, class:'nav-link' %>
+          </li>
+          <li class = "nav-item active">
+            <%= link_to "Doctors", doctors_path, class:'nav-link' %>
+          </li>
+          <li class = "nav-item active">
+            <%= link_to "Patients", patients_path, class:'nav-link' %>
+          </li>
+        </ul>
+        <ul class = "navbar-nav position-absolute top-0 end-0 m-2">
+            <div class = "p-1">
+            <li class = "nav-item ">
+              <%= button_to "Edit Profile", edit_user_registration_path, class: "btn nav-link" %>
+            </li>
+            </div>
+            <div class = "p-1">
+              <li class = "nav-item">
+                <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn nav-link" %>
+              </li>
+            </div>
+          <% else %>
+            <li class = "nav-item">
+              <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+            </li>
+            <li class = "nav-item">
+              <%= link_to "Log In", new_user_session_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+    </nav>
+  </header>
+    <div class = "container px-5 mt-5 shadow-lg py-3">
+      <p class = "alert-success w-25 d-flex justify-content-center shadow"><%= notice %></p>
+      <p class = "alert-success"><%= alert %></p>
+      <%= yield %>
+      <section>
+        <%= link_to "Back", :back, class: "btn btn-dark my-3" %>
+      </section>
+    </div>
   </body>
+
 </html>
