Add seeds, edit layout

--- a/app/views/appointments/_card.html.erb
+++ b/app/views/appointments/_card.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class = "card-body">
     <p><b>Patient: </b><%= appointment.patient.name %></p>
-    <p><b>Physician: </b><%= appointment.doctor.name %></p>
+    <p><b>Doctor: </b><%= appointment.doctor.name %></p>
     <p><b>Description: </b><%= appointment.description %></p>
   </div>
 </div>
