--- a/app/views/doctors/_card.html.erb
+++ b/app/views/doctors/_card.html.erb
@@ -3,6 +3,6 @@
   <h4><%= link_to "Doctor №" + doctor.id.to_s, doctor %></h4>
   </div>
   <div class = "card-body">
-    <p><b>Physician: </b><%= doctor.name %></p>
+    <p><b>Doctor: </b><%= doctor.name %></p>
   </div>
 </div>
