--- a/app/views/patients/_card.html.erb
+++ b/app/views/patients/_card.html.erb
@@ -3,6 +3,6 @@
   <h4><%= link_to "Patient №" + patient.id.to_s, patient %></h4>
   </div>
   <div class = "card-body">
-    <p><b>Physician: </b><%= patient.name %></p>
+    <p><b>Patient: </b><%= patient.name %></p>
   </div>
 </div>
