--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,20 +17,26 @@
       <a class = "navbar-brand" href="#">Hospital</a>
         <% if user_signed_in? %>
         <ul class = "navbar-nav">
-          <li class = "nav-item active">
-            <%= link_to "Appointments", appointments_path, class:'nav-link' %>
-          </li>
-          <li class = "nav-item active">
-            <%= link_to "Doctors", doctors_path, class:'nav-link' %>
-          </li>
-          <li class = "nav-item active">
-            <%= link_to "Patients", patients_path, class:'nav-link' %>
-          </li>
+          <% if can? :read, Appointment %>
+            <li class = "nav-item active">
+              <%= link_to "Appointments", appointments_path, class:'nav-link' %>
+            </li>
+          <% end %>
+          <% if can? :read, Doctor %>
+            <li class = "nav-item active">
+              <%= link_to "Doctors", doctors_path, class:'nav-link' %>
+            </li>
+          <% end %>
+          <% if can? :read, Patient %>
+            <li class = "nav-item active">
+              <%= link_to "Patients", patients_path, class:'nav-link' %>
+            </li>
+          <% end %>
         </ul>
         <ul class = "navbar-nav position-absolute top-0 end-0 m-2">
             <div class = "p-1">
             <li class = "nav-item ">
-              <%= button_to "Edit Profile", edit_user_registration_path, class: "btn nav-link" %>
+              <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link" %>
             </li>
             </div>
             <div class = "p-1">
