--- a/app/views/doctors/_card.html.erb
+++ b/app/views/doctors/_card.html.erb
@@ -4,5 +4,6 @@
   </div>
   <div class = "card-body">
     <p><b>Doctor: </b><%= doctor.name %></p>
+    <p><b>Speciality: </b><%= doctor.speciality %></p>
   </div>
 </div>
