--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,12 +1,25 @@
 <%= simple_form_for @appointment do |form| %>
+  <% if current_user.patient_role? %>
+    <section>
+     <%= form.hidden_field :patient_id, value: current_user.patient_id %>
+      <% @appointment.patient_id = current_user.patient_id%>
+    </section>
+    <section>
+      <%= form.association :doctor, collection: @doctors, label_method: :name, value_method: :id, label: "Doctor", include_blank: false, input_html: {class: 'w-50'} %>
+    </section>
+  <% end%>
+  <% if current_user.admin_role?%>
+    <section>
+      <%= form.association :patient, collection: @patients, label_method: :name, value_method: :id, label: "Patient", include_blank: false, input_html: {class: 'w-50'} %>
+    </section>
+    <section>
+      <%= form.association :doctor, collection: @doctors, label_method: :name, value_method: :id, label: "Doctor", include_blank: false, input_html: {class: 'w-50'} %>
+    </section>
+  <% end %>
+  <% if current_user.doctor_role? || current_user.admin_role?%>
   <section>
-    <%= form.association :patient, collection: @patients, label_method: :name, value_method: :id, label: "Patient", include_blank: false, input_html: {class: 'w-50'} %>
+    <%= form.input :recomendation, as: :string, class: 'w-20' %>
   </section>
-  <section>
-    <%= form.association :doctor, collection: @doctors, label_method: :name, value_method: :id, label: "Doctor", include_blank: false, input_html: {class: 'w-50'} %>
-  </section>
-  <section>
-    <%= form.input :description, as: :string, class: 'w-20' %>
-  </section>
+  <% end%>
   <%= form.button :submit, class: 'btn btn-success mt-3' %>
 <% end %>
