--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -2,5 +2,8 @@
   <section>
     <%= form.input :name, as: :string, class: 'w-20' %>
   </section>
+  <section>
+    <%= form.input :speciality, collection: Doctor::SPECIALITY, include_blank: false %>
+  </section>
   <%= form.button :submit, class: 'btn btn-success mt-3' %>
 <% end %>
